test/spec_vectors/try_table/fail/module_10.wat
(module (func (try_table (catch_all_ref 0))))